api/frontend/src/app/components/upload-image/upload-image.component.css
.container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: 70vh;
  width: 60vw;
}

.upload-button {
  height: 7vh;
  width: 25vw;
  border-radius: 25px;
  margin: 15px;
  background-color: #29339B;
  color: white;
  border: none;
  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
  cursor: pointer;
  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
  font-size: 18px;
}

.different-button {
  height: 7vh;
  width: 25vw;
  border-radius: 25px;
  background-color: #931F1D;
  color: white;
  border: none;
  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
  cursor: pointer;
  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
  font-size: 18px;
}

.file-label {
  display: inline-block;
  padding: 10px 20px;
  background-color: #4CAF50;
  color: white;
  cursor: pointer;
  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
  font-size: 18px;
  border-radius: 25px;
}


img {
  max-width: auto;
  height: auto;
  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
}

